--- a/expressive-text/css/expressive-text.css
+++ b/expressive-text/css/expressive-text.css
@@ -7,9 +7,9 @@
 }
 section{
     position: absolute;
-    width: 960px;
-    height: 200%;
-    background: radial-gradient(#333,#000);
+    width: 100%;
+    height: 200vw;
+    background: radial-gradient(rgb(33, 214, 196),rgb(19, 122, 107));
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@ section h2{
     font-size: 2em;
     text-transform: lowercase;
     position: absolute;
-    top: 15%;
+    top: 12%;
     opacity: 80%;
 }
 section .set{
@@ -102,19 +102,298 @@ section .set div:nth-child(8){
 .set2{
     transform: scale(1.5) rotateY(180deg);
     filter: blur(2px);
-    left: 100%;
+    left: 250%;
 }
 .set3{
     transform: scale(0.8) rotateX(180deg);
     filter: blur(4px);
+    left: 150%;
 }
 section p{
     color: #fff;
     font-size: 1em;
     text-transform: lowercase;
     text-align: center;
-    top: -2%;
-    margin: 35%;
+    top: 17%;
+    position: absolute;
+    opacity: 50%;
+}
+section p2{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 20%;
+    position: absolute;
+    opacity: 50%;
+}
+section p3{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 23%;
+    position: absolute;
+    opacity: 50%;
+}
+section p4{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 26%;
+    position: absolute;
+    opacity: 50%;
+}
+section p5{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 29%;
+    position: absolute;
+    opacity: 50%;
+}
+section p6{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 32%;
+    position: absolute;
+    opacity: 50%;
+}
+section p7{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 35%;
+    position: absolute;
+    opacity: 50%;
+}
+section p8{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 38%;
+    position: absolute;
+    opacity: 50%;
+}
+section p9{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 41%;
+    position: absolute;
+    opacity: 50%;
+}
+section p10{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 44%;
+    position: absolute;
+    opacity: 50%;
+}
+section p11{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 47%;
+    position: absolute;
+    opacity: 50%;
+}
+section p12{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 50%;
+    position: absolute;
+    opacity: 50%;
+}
+section p13{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 53%;
+    position: absolute;
+    opacity: 50%;
+}
+section p14{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 56%;
+    position: absolute;
+    opacity: 50%;
+}
+section p15{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 59%;
+    position: absolute;
+    opacity: 50%;
+}
+section p16{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 62%;
+    position: absolute;
+    opacity: 50%;
+}
+section p17{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 65%;
+    position: absolute;
+    opacity: 50%;
+}
+section p18{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 68%;
+    position: absolute;
+    opacity: 50%;
+}
+section p19{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 71%;
+    position: absolute;
+    opacity: 50%;
+}
+section p20{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 74%;
+    position: absolute;
+    opacity: 50%;
+}
+section p21{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 77%;
+    position: absolute;
+    opacity: 50%;
+}
+section p22{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 80%;
+    position: absolute;
+    opacity: 50%;
+}
+section p23{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 83%;
+    position: absolute;
+    opacity: 50%;
+}
+section p24{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 86%;
+    position: absolute;
+    opacity: 50%;
+}
+section p25{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 89%;
+    position: absolute;
+    opacity: 50%;
+}
+section p26{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 92%;
+    position: absolute;
+    opacity: 50%;
+}
+section p27{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 95%;
+    position: absolute;
+    opacity: 50%;
+}
+section p28{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 97%;
+    position: absolute;
+    opacity: 50%;
+}
+section p29{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 100%;
+    position: absolute;
+    opacity: 50%;
+}
+section p30{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 103%;
+    position: absolute;
+    opacity: 50%;
+}
+section p31{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 106%;
+    position: absolute;
+    opacity: 50%;
+}
+section p32{
+    color: #fff;
+    font-size: 1em;
+    text-transform: lowercase;
+    text-align: center;
+    top: 109%;
     position: absolute;
     opacity: 50%;
 }
