--- a/Abstracted-Web/css/abstract-web.css
+++ b/Abstracted-Web/css/abstract-web.css
@@ -32,35 +32,40 @@
     width: 280px;
     align-self: center;
 }
+.btn{
+    position: absolute;
+    top: 15px;
+    right: 45px;
+    height: 45px;
+    width: 45px;
+    background: black;
+}
+.btn span{
+    background: white;
+    font-size: 28px;
+    line height: 45px;
+}
 .sidebar{
-    position: relative;
+    position: fixed;
     right: -250px;
     width: 250px;
     height: 100%;
-    background: rgb(253, 234, 0);
 }
-.sidebar ul a{
-    display: block;
+nav ul{
+    background: rgb(253, 234, 0);
     height: 100%;
     width: 100%;
-    line-height: 65px;
+    list-style: none;
+}
+nav ul li{
+    line-height: 60px;
+}
+nav ul li a{
     color: black;
+    text-decoration: none;
+    font-size: 18px;
     padding-right: 40px;
-    box-sizing: border-box;
-}
-#check{
-    display: none;
-}
-label #btn,label #cancel{
-    position: absolute;
-    cursor: pointer;
-    background: white;
-    border-radius: 3px;
-}
-label #btn{
-    right: 40px;
-    top: 25px;
-    font-size: 35px;
-    color: black;
-    padding: 6px 12px;
+    font-weight: 500;
+    display: block;
+    width: 100%;
 }
