--- a/toy-website/css/toy1.css
+++ b/toy-website/css/toy1.css
@@ -20,7 +20,7 @@ body{
 .container .box{
     position: relative;
     width: 80vw;
-    height: 60vw;
+    height: 70vw;
     background: rgba(158, 227, 248, 1);
     border-radius: 15vw;
     box-sizing: border-box;
@@ -34,8 +34,8 @@ body{
 }
 .container1 .box1{
     position: absolute;
-    left: 22%;
-    top: 18%;
+    left: 15%;
+    top: 12%;
     width: 20vw;
     height: 20vw;
     background:  rgba(35, 28, 73, 1);
@@ -52,8 +52,8 @@ body{
 
 .container1 .box2{
     position: absolute;
-    left: 22%;
-    bottom: 18%;
+    left: 15%;
+    bottom: 20%;
     width: 20vw;
     height: 20vw;
     background:  rgba(35, 28, 73, 1);
@@ -69,8 +69,8 @@ body{
 }
 .container1 .box3{
     position: absolute;
-    right: 22%;
-    top: 18%;
+    right: 35%;
+    top: 12%;
     width: 20vw;
     height: 20vw;
     background:  rgba(35, 28, 73, 1);
@@ -80,8 +80,8 @@ body{
 }
 .container1 .box4{
     position: absolute;
-    right: 22%;
-    bottom: 18%;
+    right: 35%;
+    bottom: 20%;
     width: 20vw;
     height: 20vw;
     background:  rgba(35, 28, 73, 1);
@@ -89,10 +89,37 @@ body{
     box-sizing: border-box;
     overflow: hidden;
 }
+.container1 .box4 .fire{
+    align-items: center;
+    position: relative;
+    width: 20vw;
+    height: 20vw;
+}
 .container1 .audio1{
     position: relative;
-    right: 330%;
-    bottom: 5%;
+    right: 320%;
+    bottom: 3%;
+    width: 18vw;
+    height: 10vw;
+}
+.container1 .audio2{
+    position: relative;
+    right: 320%;
+    bottom: -26%;
+    width: 18vw;
+    height: 10vw;
+}
+.container1 .audio3{
+    position: relative;
+    right: 170%;
+    bottom: 16%;
+    width: 18vw;
+    height: 10vw;
+}
+.container1 .audio4{
+    position: relative;
+    right: 170%;
+    bottom: -13%;
     width: 18vw;
     height: 10vw;
 }
